# fmcli

./: BEADS.md  LICENSE  README.md  pyproject.toml  tox.ini
.beads/: issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.github/workflows/: release.yml
src/fmcli/: __main__.py  account.py  carddav.py  cli_utils.py  config.py
src/fmcli/commands/: calendar.py  contacts.py  email.py  files.py  icloud_export.py  mailbox.py  masked_email.py
tests/: conftest.py  test_account.py  test_calendar.py  test_carddav.py  test_cli.py  test_config.py  test_contacts.py  test_email.py  test_files.py  test_icloud_export.py  test_mailbox.py  test_masked_email.py
