[project]
name = "fmcli"
version = "0.1.0"
description = "Multi-account Fastmail CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jmapc>=0.2.0",
    "caldav>=1.3.0",
    "webdavclient3>=3.14.6",
    "typer[all]>=0.12.0",
    "vobject>=0.9.9",
    "lxml>=5.0",
    "defusedxml>=0.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[project.scripts]
fmcli = "fmcli.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fmcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fmcli --cov-report=term-missing"
